Add temporary verification-state endpoint
- add repository/service/controller, entity/DTOs
- add mapstruct POM build dependency

Resolves:
IDVA3-2451

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
+        </dependency>
+
         <!-- Oracle JDBC driver -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
