Complete POC on verification-state endpoint
- add Jakarta validation to request body
- rename request body DTO class
- apply snake case naming to JSON properties
- remove unnecessary `countQuery` (for paging) from native query
- amend OpenAPI spec

See:
IDVA3-2747

--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -1146,7 +1146,7 @@ components:
           properties:
             verification_status:
               type: string
-              enum: [Unverified, Verified, Pending]
+              enum: [UNVERIFIED, VERIFIED, PENDING]
               description: The verification status
             verification_start_date:
               type: string
