Fix endpoint details is schema
- rename operationId
- restrict query to appointment type 5007 only

See:
IDVA3-2451

--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -241,7 +241,7 @@ paths:
     post:
       tags:
         - persons-of-significant-control
-      operationId: getIndividualPscVerificationState
+      operationId: getPscVerificationState
       summary: Get the identity verification state of a person of significant control for the company
       requestBody:
         description: Search criteria for specific individual PSC verification state
