Add feature flag for verification-state endpoint
- add Environment config ${FEATURE_FLAG_PSC_VERIFICATION_STATE_GET_180225:false}
- add Spring tests for beans enabled/disabled by feature flag
- add test coverage to controller and service impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ management.endpoints.web.path-mapping.health=/healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
 management.endpoints.web.exposure.include=health
+
+feature.psc_verification_state_get=${FEATURE_FLAG_PSC_VERIFICATION_STATE_GET_180225:false}
