Amend SQL from DB team suggestions
- use left join on APPT_VERIFICATION
- remove redundant GROUP BY clause

- remove verification_status from response JSON when null

--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -1140,8 +1140,9 @@ components:
       properties:
         verification_status:
           type: string
-          enum: [UNVERIFIED, VERIFIED, PENDING]
+          enum: ['null', UNVERIFIED, VERIFIED, PENDING]
           description: The verification status
+          example: "UNVERIFIED"
         verification_start_date:
           type: string
           format: date
