Replace VerificationState query with IdentityVerificationDetails
- update query response data model
- select data from new/renamed CHIPS db columns
- update all appropriate unit and integration tests

Resolves:
IDVA3-3380

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
 management.endpoints.web.exposure.include=health
 
-feature.psc_verification_state_get=${FEATURE_FLAG_PSC_VERIFICATION_STATE_GET_180225:false}
+# Renamed feature flag property; uses the old environment variable for its value to avoid changing existing environments configuration with an updated name
+feature.psc_verification_details_get=${FEATURE_FLAG_PSC_VERIFICATION_STATE_GET_180225:false}
